@@ -27,4 +27,5 @@ manualdata_DATA = \
 
 # generated by `ls -1 | sed -e 's/\(.*\)/     \1 \'`
 
-EXTRA_DIST = $(manualdata_DATA)
+EXTRA_DIST = $(manualdata_DATA) \
+     sylpheed.sgml
