@@ -27,12 +27,12 @@ manualdata_DATA = \
      sylpheed-7.html \
      sylpheed-8.html \
      sylpheed-9.html \
-     sylpheed.html \
-     sylpheed.sgml
+     sylpheed.html
 
 # generated by `ls -1 | grep -v Makefile | sed -e 's/\(.*\)/     \1 /'`
 
-EXTRA_DIST = $(manualdata_DATA)
+EXTRA_DIST = $(manualdata_DATA) \
+     sylpheed.sgml
 
 update-html:
 	sgml2html --language=ja --charset=nippon sylpheed.sgml
