@@ -4,6 +4,10 @@
 
 2010-07-16
 
+	* manual/*/Makefile.am: disabled install of sylpheed.sgml.
+
+2010-07-16
+
 	* libsylph/utils.c
 	  libsylph/procmsg.c: removed redundant debug print.
 
